Prevent getting a scrollbar on the sidebar
Is this a terrible solution, sure? But it works!

--- a/src/doc_emit/html_embedded_styles.css
+++ b/src/doc_emit/html_embedded_styles.css
@@ -82,6 +82,7 @@ nav {
     background-color: #f0f0f0;
 
     overflow-y: auto;
+    overflow-x: hidden;
     scrollbar-width: thin;
 }
 
